Bug 626403, scrollwheel not working after no printers dialog is closed, r=jimm,a=roc